[gd_scene load_steps=12 format=3 uid="uid://c16ox6xq1j27n"]

[ext_resource type="Script" path="res://Scenes/TradingBox/TradingBoxBase2D.gd" id="1_2ltjw"]
[ext_resource type="PackedScene" uid="uid://c50l177ukx3bp" path="res://Scenes/TradingBox/FadeOutText.tscn" id="2_c3j1f"]
[ext_resource type="Material" uid="uid://by7hek5nbsuf8" path="res://Scenes/GameWorld2D/TradeCompletedParticlesMaterial.tres" id="2_tnl2x"]
[ext_resource type="AudioStream" uid="uid://b7x8g1h52jc87" path="res://Assets/trade_accepted.wav" id="4_56t0f"]
[ext_resource type="AudioStream" uid="uid://hluxyfsqm2pi" path="res://Assets/trade_complete.wav" id="5_v35xf"]
[ext_resource type="AudioStream" uid="uid://x2d0esilwyuk" path="res://Assets/trade_rejected.wav" id="6_o8x6v"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0xuc7"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(20, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_max = 360.0
direction = Vector3(0, -1, 0)
spread = 30.0
initial_velocity_min = 60.0
initial_velocity_max = 100.0
gravity = Vector3(0, 98, 0)
scale_max = 3.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2dhsa"]
size = Vector2(44, 4)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_n07bi"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("4_56t0f")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_m8y6n"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("5_v35xf")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_m5gpr"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("6_o8x6v")
stream_0/weight = 1.0

[node name="TradingBoxBase2D" type="Node2D"]
script = ExtResource("1_2ltjw")
fade_out_text_scene = ExtResource("2_c3j1f")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-24, -16, 24, -16, 24, 16, -24, 16)

[node name="TradePolygon" type="Polygon2D" parent="Polygon2D"]
unique_name_in_owner = true
color = Color(0, 0, 0, 1)

[node name="TradeCompletedParticles2D" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -16)
emitting = false
amount = 16
process_material = ExtResource("2_tnl2x")
lifetime = 2.5
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
visibility_rect = Rect2(0, 0, 0, 0)

[node name="TradeAcceptedParticles2D" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -16)
emitting = false
process_material = SubResource("ParticleProcessMaterial_0xuc7")
lifetime = 2.5
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
visibility_rect = Rect2(0, 0, 0, 0)

[node name="BoxStaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BoxStaticBody2D"]
polygon = PackedVector2Array(-22, -14, -22, 14, 22, 14, 22, -14, 24, -16, 24, 16, -24, 16, -24, -16)

[node name="TradeArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -12)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TradeArea2D"]
shape = SubResource("RectangleShape2D_2dhsa")

[node name="TallyLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_top = 6.0
offset_right = 23.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
horizontal_alignment = 2
vertical_alignment = 2

[node name="FadeOutTextMarker2D" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -16)

[node name="AcceptedStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_n07bi")
bus = &"SFX"

[node name="CompletedStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_m8y6n")
bus = &"SFX"

[node name="RejectedStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_m5gpr")
bus = &"SFX"

[connection signal="body_entered" from="TradeArea2D" to="." method="_on_trade_area_2d_body_entered"]
